modified Titanic - Died or Not?.ipynb for better readability

--- a/'Titanic' - Died or Not ?.ipynb
+++ b/'Titanic' - Died or Not ?.ipynb
@@ -462,6 +462,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check how many missing values are there -"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
